# ecommerce-scrapper-api

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/curl/: flipkart.reviewPage
ecommerce/: constants.py  logger.py  types.py
ecommerce/api/: __init__.py  app.py  errors.py  options.py
ecommerce/api/routes/: curl.py
ecommerce/api/routes/flipkart/: __init__.py  product_page.py  review_page.py  search_page.py
ecommerce/core/: errors.py  io.py
ecommerce/parser/: __init__.py  _parser.py  pagination.py  product_page.py  review_page.py  search_page.py
ecommerce/parser/flipkart/: __init__.py  _utils.py  product_page.py  review_page.py  search_page.py
ecommerce/tests/test_api/test_flipkart/: _utils.py  test_product_page.py  test_review_page.py  test_search_page.py
ecommerce/validator/flipkart/: __init__.py  product_page.py  review_page.py  search_page.py
