[project]
name = "ecommerce-scrapper-api"
version = "0.1.0"
description = "Fetch data from ecommerce websites like flipkart."
authors = [{ name = "Anshul Raj Verma", email = "arv.anshul.1864@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.11"
license = "MIT"
dependencies = [
    "bs4>=0.0.2",
    "curler==0.1.0",
    "fastapi>=0.109.2",
    "httpx>=0.26.0",
    "pydantic>=2.6.1",
    "uvicorn>=0.27.1",
]

[tool.rye]
managed = true
virtual = true
dev-dependencies = ["pytest>=8.0.0"]

[tool.rye.scripts]
app = "uvicorn --reload ecommerce.api.app:app"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "B",
    "BLE",
    "C4",
    "C90",
    "E",
    "F",
    "I",
    "ICN",
    "INP",
    "ISC",
    "PGH",
    "PIE",
    "PTH",
    "Q",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TCH",
    "UP",
    "W",
    "YTT",
]
extend-ignore = [
    "B008",
    "B905",
    "E501",
    "E741",
    "INP001",
    "ISC001",
    "N818",
    "PGH003",
    "S101",
    "S301",
    "S311",
    "UP035",
]
extend-unfixable = ["B", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
